<resources>
    <string name="app_name">Ble Application</string>
    <string name="swm_ble_choose_your_device">Choose your device</string>
    <string name="swm_ble_do_connect">Connect</string>
    <string name="swm_ble_scan">Scanning SWM devices ...</string>
    <string name="swm_logo">SINGULAR WINGS</string>
    <string name="swm_ble_turn_on_device">Turn on SWM device</string>
    <string name="swm_cta_ok">OK</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="ble_ecg_service">ECG</string>
    <string name="ble_motion_service">Motion</string>
    <string name="ble_packet_loss">Packet Loss</string>
    <string name="ble_engineer">SWM Engineer</string>
    <string name="swm_super_run_sub">Run, Health, Fast, Power</string>
    <string name="swm_cta_go">GO</string>
    <string name="ble_count">Count</string>
    <string name="ble_pressure">Pressure</string>
    <string name="ble_swm_service">Swm service</string>
</resources>
