<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".MainActivity">
    <com.swm.ble.DeviceStatus
        android:id="@+id/ble_device_status"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ble_status_inactive"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="28dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ble_ecg"
        app:layout_constraintVertical_bias="0.0" />

    <com.swm.ble.SwmToggle android:id="@+id/ble_swm_service_toggle"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ble_ecg_toggle"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/ble_device_status"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintVertical_bias="0.935" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/ble_swm_service"
        app:layout_constraintLeft_toRightOf="@+id/ble_device_status"
        android:layout_marginLeft="10dp"
        app:layout_constraintTop_toTopOf="@+id/ble_device_status"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/ble_device_status"
        android:layout_marginBottom="0dp"
        android:id="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/ble_ecg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ble_ecg_service"
        android:textSize="20dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintVertical_bias="0.187" />

    <com.swm.ble.SwmToggle android:id="@+id/ble_ecg_toggle"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/ble_ecg"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ble_ecg"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/ble_ecg"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintVertical_bias="0.692" />

    <TextView
        android:id="@+id/ble_motion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ble_motion_service"
        android:textSize="20dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/ble_ecg"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/ble_ecg"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="253dp"
        app:layout_constraintHorizontal_bias="0.272"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ble_ecg"
        app:layout_constraintVertical_bias="0.867" />

    <com.swm.ble.SwmToggle android:id="@+id/ble_motion_toggle"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/ble_ecg_toggle"
        app:layout_constraintTop_toTopOf="@id/ble_motion"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/ble_motion"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintVertical_bias="0.692"
        app:layout_constraintLeft_toLeftOf="@+id/ble_ecg_toggle" />

    <TextView
        android:id="@+id/ble_ecg_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ble_count"
        android:textSize="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ble_ecg_packet_loss_label"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/ble_ecg"
        app:layout_constraintHorizontal_bias="0.177" />

    <TextView
        android:id="@+id/ble_ecg_packet_count"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="0"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ble_ecg_count_label"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@id/ble_ecg_count_label"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintLeft_toRightOf="@+id/ble_ecg_count_label"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.637" />

    <TextView
        android:id="@+id/ble_ecg_packet_loss_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ble_packet_loss"
        android:textSize="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ble_motion"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/ble_ecg_count_label"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/ble_ecg_count_label"
        app:layout_constraintVertical_bias="0.657"
        app:layout_constraintTop_toBottomOf="@+id/ble_ecg"
        app:layout_constraintHorizontal_bias="0.15" />

    <TextView
        android:id="@+id/ble_ecg_packet_loss"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="0"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/ble_ecg_packet_count"
        app:layout_constraintTop_toTopOf="@+id/ble_ecg_packet_loss_label"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/ble_ecg_packet_loss_label"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.5"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/ble_ecg_packet_count"
        app:layout_constraintHorizontal_bias="1.00" />

    <TextView
        android:id="@+id/ble_motion_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ble_count"
        android:textSize="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ble_motion_packet_loss_label"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/ble_motion"
        app:layout_constraintHorizontal_bias="0.177" />

    <TextView
        android:id="@+id/ble_motion_count"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="0"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ble_motion_count_label"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@id/ble_motion_count_label"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/ble_motion_count_label"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.637" />

    <TextView
        android:id="@+id/ble_motion_packet_loss_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ble_packet_loss"
        android:textSize="18dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/ble_motion_count_label"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/ble_motion_count_label"
        app:layout_constraintVertical_bias="0.123"
        app:layout_constraintTop_toBottomOf="@id/ble_motion"
        app:layout_constraintHorizontal_bias="0.123" />

    <TextView
        android:id="@+id/ble_motion_packet_loss"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="0"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/ble_motion_packet_loss_label"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/ble_motion_count"
        app:layout_constraintLeft_toLeftOf="@+id/ble_motion_count"
        app:layout_constraintTop_toBottomOf="@+id/ble_motion_count"
        app:layout_constraintHorizontal_bias="0.125" />

    <TextView
        android:id="@+id/ble_pressure_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ble_pressure"
        android:textSize="20dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/ble_motion"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/ble_motion"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="116dp"
        app:layout_constraintTop_toBottomOf="@+id/ble_motion" />

    <com.swm.ble.SwmToggle
        android:id="@+id/ble_pressure_toggle"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/ble_motion_toggle"
        app:layout_constraintTop_toTopOf="@id/ble_pressure_label"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/ble_pressure_label"
        android:layout_marginBottom="0dp"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintVertical_bias="0.73"
        app:layout_constraintLeft_toLeftOf="@+id/ble_motion_toggle" />

    <TextView
        android:id="@+id/ble_pressure_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ble_count"
        android:textSize="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ble_pressure_packet_loss_label"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.538"
        app:layout_constraintTop_toBottomOf="@+id/ble_pressure_label"
        app:layout_constraintHorizontal_bias="0.177" />

    <TextView
        android:id="@+id/ble_pressure_count"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="0"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/ble_pressure_count_label"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@id/ble_pressure_count_label"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/ble_pressure_count_label"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.637" />

    <TextView
        android:id="@+id/ble_pressure_packet_loss_label"
        android:layout_width="113dp"
        android:layout_height="20dp"
        android:text="@string/ble_packet_loss"
        android:textSize="18dp"
        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="-58dp"
        app:layout_constraintRight_toRightOf="@+id/ble_pressure_count_label"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/ble_pressure_count_label"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/ble_pressure_packet_loss"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="0"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/ble_pressure_packet_loss_label"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/ble_pressure_count"
        app:layout_constraintLeft_toLeftOf="@+id/ble_pressure_count"
        app:layout_constraintTop_toBottomOf="@+id/ble_pressure_count"
        app:layout_constraintHorizontal_bias="0.125" />
</android.support.constraint.ConstraintLayout>
